# mba-ia-desafio-ingestao-busca

./: .env.example  .gitignore  README.md  pyproject.toml  tasks.py
src/: __init__.py  chat.py  ingest.py  pdf_loader.py  search.py
src/db/: __init__.py  config.py
src/embeddings/: __init__.py  config.py
